objects/X7S_Ideas_Custom_Field__mdt/X7S_Ideas_Custom_Field__mdt.object-meta.xml
<CustomObject>
    <description>Define a Custom Idea field</description>
    <label>7S Ideas Custom Field</label>
    <pluralLabel>7S Ideas Custom Fields</pluralLabel>
</CustomObject>