objects/X7S_Ideas_Custom_Field__mdt/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <inlineHelpText>Additional field data (eg.  CSV picklist values, Phone number pattern)</inlineHelpText>
    <label>Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>