objects/X7S_Ideas_Custom_Field__mdt/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <inlineHelpText>Custom field tooltip</inlineHelpText>
    <label>Info</label>
    <length>80</length>
    <type>Text</type>
</CustomField>