objects/X7S_Ideas_Custom_Field__mdt/listViews/All_Custom_Metadata_Fields.listView-meta.xml
<ListView>
    <fullName>All_Custom_Metadata_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>API_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Custom Metadata Fields</label>
    <language>en_US</language>
</ListView>